# paperforge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: charts.md  config.md  gui.md  index.md  pdf.md  slides.md
examples/: custom.css  sample_paper.md  sample_slides.md  sample_slides.pptx  test_gui_slides.pptx
examples/chart_configs/: bar_example.yaml  dose_response.csv  line_example.yaml  log_scale_example.yaml
scripts/: build_icon.py  build_linux.sh  build_windows.bat  generate_placeholder_icon.py
src/img/: icon.psd
src/paperforge/: __init__.py  __main__.py  browser.py  cli.py  config.py  i18n.py  theme.py
src/paperforge/charts/: __init__.py  base.py  builder.py  data_loader.py  palette.py  wizard.py
src/paperforge/charts/templates/: __init__.py  bar.py  dose_response.py  line.py  log_scale.py  scatter.py
src/paperforge/gui/: __init__.py  app.py  i18n_qt.py  main_window.py  pdf_tab.py  signals.py  slides_tab.py  theme.py  worker.py
src/paperforge/gui/chart_tab/: __init__.py  annotations_form.py  chart_tab.py  csv_import_dialog.py  examples_data.py  preview_canvas.py  series_table.py  state.py  style_panel.py  template_picker.py
src/paperforge/gui/widgets/: __init__.py  busy_button.py  file_picker.py  log_viewer.py  status_bar.py
src/paperforge/locales/: en.yaml  pt_br.yaml
src/paperforge/pdf/: __init__.py  builder.py  post_processors.py  renderer.py
src/paperforge/pdf/styles/: academic.css  default.css  minimal.css
src/paperforge/slides/: __init__.py  builder.py  cover.py  layout.py  parser.py  renderers.py
src/paperforge/utils/: logging.py  paths.py
tests/: conftest.py  test_charts_data_loader.py  test_charts_templates.py  test_cli.py  test_i18n.py  test_pdf_renderer.py  test_slides_parser.py
